--- a/templates/rss.j2
+++ b/templates/rss.j2
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
     <generator>NUAA</generator>
+    <id>https://blogroll.a2os.club</id>
     <title>NUAARSS</title>
     <updated>{{update}}</updated>
     <link href="https://blogroll.a2os.club"/>
@@ -10,11 +11,10 @@
     
     {% for item in items %}
     <entry>
-        <id>{{item.url}}</id>
+        <id>{{item.link}}</id>
         <title><![CDATA[{{item.title|safe}}]]></title>
         <updated>{{item.pubDate}}</updated>
         <link href="{{item.link}}"/>
-        <summary>{{item.description}}</summary>
         <content type="text/html" src="{{item.link}}"><![CDATA[{{item.description|safe}}]]></content>
         <author>
             <name><![CDATA[{{item.author}}]]></name>
